# excel-mapping-tool

./: .gitignore  Excel字段映射填充工具_技术方案.md  README.md
backend/: compute.py  config.py  executor.py  headers.py  llm_parser.py  main.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: ExecuteButton.jsx  FileUploader.jsx  ResultPanel.jsx  RuleEditor.jsx  SheetSelector.jsx
